# radar-tendencias-tecnologicas

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.streamlit/: config.toml
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
app/: Home.py
app/components/: charts.py  panel.py  progress.py
app/pages/: 1_Historico.py  2_Evidencias.py
docs/: architecture.md  critical-review.md  project-book.docx  project-book.md  runbook.docx  runbook.md
docs/apresentacao/: arguicao.md  build-deck.js  criterios-avaliacao.md  radar-tendencias-apresentacao.pptx
docs/apresentacao/criterios/: 01-arquitetura.drawio  02-qualidade-implementacao.drawio  (+1 more)
infra/: export_reports.py  gen_test_report.py  provision.md  smoke_test.py  smoke_test_result.json  spike_result.json  spike_web_search.py
specs/001-radar-tendencias/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/radar/: config.py  models.py  orchestrator.py
tests/fixtures/: agent_citations.json  arxiv_atom.xml  openalex_response.json  synthesizer_output.json
tests/integration/: test_history.py  test_pipeline.py
tests/unit/: test_collectors.py  test_dedup.py  test_grading.py  test_industrial_scope.py  test_local_repo.py  test_scope_guard.py  test_synthesizer_parsing.py  test_theme_translator.py
(+18 files in other folders)
