[project]
name = "radar-tendencias"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: hits real Azure/Foundry/Cosmos resources; requires valid .env (deselected by default)",
]
addopts = "-m 'not live'"
testpaths = ["tests"]
